ギャラリー作成

--- a/index.html
+++ b/index.html
@@ -1,61 +1,72 @@
 <!doctype html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <title>PhotoStudio NATURA</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="cleartype" content="on">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="photo studio natura のサイトです。">
-    <meta name="keywords" content="natura,NATURA,photostudionatura">
-    <link rel="stylesheet" href="/dist/css/common.css">
-    <link rel="stylesheet" href="/assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" />
-    <link rel="apple-touch-icon-precomposed" href="/assets/images/favicon-152.ico">
+  <meta charset="UTF-8">
+  <title>PhotoStudio NATURA</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="cleartype" content="on">
+  <meta name="viewport" content="width=device-width">
+  <meta name="description" content="photo studio natura のサイトです。">
+  <meta name="keywords" content="natura,NATURA,photostudionatura">
+  <link rel="stylesheet" href="/dist/css/common.css">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+  <link rel="apple-touch-icon-precomposed" href="/assets/images/favicon-152.ico">
 </head>
+
 <body>
-<header></header>
-<main>
+  <header></header>
+  <main>
     <div class="wrapper">
-        <nav class="natura-menu-link">
-            <ul class="natura-list-link">
-                <li><h1><a href="/">NATURA</a></h1></li>
-                <li class="jsc-modal-trigger"><a href="#">READ ME</a></li>
-                <li><a href="mailto:photostudionatura@gmail.com">EMAIL</a></li>
-            </ul>
-        </nav>
-        <div class="natura-field-kv">
-            <ul class="natura-list-kv jsc-kv-container">
-                <li>
-                    <a href="#">
-                        <p class="top-nav-description"></p>
-                    </a>
-                </li>
-            </ul>
-        </div>
+      <nav class="natura-menu-link">
+        <ul class="natura-list-link">
+          <li>
+            <h1>
+              <a href="/">NATURA</a>
+            </h1>
+          </li>
+          <li class="jsc-modal-trigger">
+            <a href="#">READ ME</a>
+          </li>
+          <li>
+            <a href="mailto:photostudionatura@gmail.com">EMAIL</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="natura-field-nav">
+        <ul class="natura-list-nav jsc-nav-list jsc-top-nav-list">
+          <li>
+            <a href="#">
+              <p class="top-nav-description"></p>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-</main>
-<footer>
+  </main>
+  <footer>
     <small>&copy; フォトスタジオ ナチューラ</small>
-</footer>
-<div class="modal-wrap jsc-modal-contents">
+  </footer>
+  <div class="modal-wrap jsc-modal-contents">
     <div class="modal-contents">
-        本サイトへのアクセスありがとうございます。<br>
-        掲載されている写真は全て盗用防止のため、画質を著しく落としております。<br>
-        何卒、ご了承下さい。<br><br>
+      本サイトへのアクセスありがとうございます。
+      <br> 掲載されている写真は全て盗用防止のため、画質を著しく落としております。
+      <br> 何卒、ご了承下さい。
+      <br>
+      <br> ご依頼等に関しましては、EMAILにてご連絡頂けますと幸いです。
 
-        ご依頼等に関しましては、EMAILにてご連絡頂けますと幸いです。<br><br>
+      <br>
+      <br> 【著作物に関する注意】
 
-        【著作物に関する注意】<br>
-        本サイトの写真（作品）は、全て有限会社フォトスタジオ ナチューラに属する著作物です。<br>
-        作品の無断転載・無断使用は固く禁じます。<br><br>
-
-        Unauthorized duplication is a violation of applicable laws.
+      <br> 本サイトの写真（作品）は、全て有限会社フォトスタジオ ナチューラに属する著作物です。
+      <br> 作品の無断転載・無断使用は固く禁じます。
+      <br>
+      <br> Unauthorized duplication is a violation of applicable laws.
     </div>
     <div class="modal-back"></div>
-</div>
-<script src="/dist/js/min/jquery-3.2.1.min.js"></script>
-<script src="/dist/js/min/common.min.js"></script>
-<script src="/dist/js/min/topPage.min.js"></script>
+  </div>
+  <script src="/dist/js/min/jquery-3.2.1.min.js"></script>
+  <script src="/dist/js/min/common.min.js"></script>
 </body>
+
 </html>
