--- a/sub/hasu02/index.html
+++ b/sub/hasu02/index.html
@@ -15,52 +15,57 @@
 </head>
 
 <body id="hasu02">
-  <header>
-  </header>
-  <main>
-    <nav class="sub-nav-wrap">
-      <a href="/index.html" class="home-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="24" viewBox="0 0 239 189">
-          <path d="M171,189c5.9-9.8,4.7-20.9,5.7-31.6c3.8-40.5,19-76.2,44.7-107.4c3.9-4.8,9.2-8.1,15.5-9.4c-4.6,9.3-3.9,19.5-4.8,29.3
-                  c-2.5,26.5-9.1,51.9-22.3,75c-9.6,16.8-18.1,34.7-36.8,44C172.3,189,171.6,189,171,189z" />
-          <path d="M104.3,0c2.1,5.7,5.5,10.4,10,14.6c32.7,30.4,53.1,67.6,61.2,111.6c0.9,5,0.9,10-0.5,14.8c-0.7,2.4-2.4,3.6-4.1,0.9
-                  c-6.1-9.3-14.9-16-22.1-24.3c-16.7-19.1-29.7-40.3-38.3-64.2c-3.3-9.1-5.8-18.4-8-27.8c-2-8.6-1.7-17.2,0.9-25.6
-                  C103.6,0,104,0,104.3,0z" />
-          <path d="M151.8,128.8c-16.1-2.9-31.4,1.3-47,0c-15.1-1.3-29.8-3.8-44.3-7.7c-8-2.2-15.6-5.4-23.1-8.9c-7.5-3.5-14.6-7.7-21.9-11.6
-                  C10.5,98,6.8,94,3.2,89.8c-0.6-0.7-1.5-1.5-0.9-2.6c0.4-0.8,1.4-0.8,2.2-0.6c10.5,3,21-0.4,31.5-0.2c19.4,0.2,38.4,2.2,57.1,8.3
-                  c12.3,4,24.4,8.3,35.8,14.4C137.6,113.7,146.6,118,151.8,128.8z" />
-        </svg>
-      </a>
-      <a href="#" class="sub-nav-icon jsc-nav-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
-          <g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
-            <g id="Artboard-1" transform="translate(-467.000000, -479.000000)">
-              <g id="slice" transform="translate(215.000000, 119.000000)" />
-              <path d="M468,480 L468,486 L474,486 L474,480 L468,480 Z M476,480 L476,486 L482,486 L482,480 L476,480 Z M484,480 L484,486 L490,486 L490,480 L484,480 Z M468,488 L468,494 L474,494 L474,488 L468,488 Z M476,488 L476,494 L482,494 L482,488 L476,488 Z M484,488 L484,494 L490,494 L490,488 L484,488 Z M468,496 L468,502 L474,502 L474,496 L468,496 Z M476,496 L476,502 L482,502 L482,496 L476,496 Z M484,496 L484,502 L490,502 L490,496 L484,496 Z"
-              />
+  <div class="contents-wrapper jsc-contents-wrapper">
+    <header>
+    </header>
+    <main>
+      <nav class="sub-nav-wrap">
+        <a href="/index.html" class="home-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="24" viewBox="0 0 239 189">
+            <path d="M171,189c5.9-9.8,4.7-20.9,5.7-31.6c3.8-40.5,19-76.2,44.7-107.4c3.9-4.8,9.2-8.1,15.5-9.4c-4.6,9.3-3.9,19.5-4.8,29.3
+                    c-2.5,26.5-9.1,51.9-22.3,75c-9.6,16.8-18.1,34.7-36.8,44C172.3,189,171.6,189,171,189z" />
+            <path d="M104.3,0c2.1,5.7,5.5,10.4,10,14.6c32.7,30.4,53.1,67.6,61.2,111.6c0.9,5,0.9,10-0.5,14.8c-0.7,2.4-2.4,3.6-4.1,0.9
+                    c-6.1-9.3-14.9-16-22.1-24.3c-16.7-19.1-29.7-40.3-38.3-64.2c-3.3-9.1-5.8-18.4-8-27.8c-2-8.6-1.7-17.2,0.9-25.6
+                    C103.6,0,104,0,104.3,0z" />
+            <path d="M151.8,128.8c-16.1-2.9-31.4,1.3-47,0c-15.1-1.3-29.8-3.8-44.3-7.7c-8-2.2-15.6-5.4-23.1-8.9c-7.5-3.5-14.6-7.7-21.9-11.6
+                    C10.5,98,6.8,94,3.2,89.8c-0.6-0.7-1.5-1.5-0.9-2.6c0.4-0.8,1.4-0.8,2.2-0.6c10.5,3,21-0.4,31.5-0.2c19.4,0.2,38.4,2.2,57.1,8.3
+                    c12.3,4,24.4,8.3,35.8,14.4C137.6,113.7,146.6,118,151.8,128.8z" />
+          </svg>
+        </a>
+        <a href="#" class="sub-nav-icon jsc-nav-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
+            <g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
+              <g id="Artboard-1" transform="translate(-467.000000, -479.000000)">
+                <g id="slice" transform="translate(215.000000, 119.000000)" />
+                <path d="M468,480 L468,486 L474,486 L474,480 L468,480 Z M476,480 L476,486 L482,486 L482,480 L476,480 Z M484,480 L484,486 L490,486 L490,480 L484,480 Z M468,488 L468,494 L474,494 L474,488 L468,488 Z M476,488 L476,494 L482,494 L482,488 L476,488 Z M484,488 L484,494 L490,494 L490,488 L484,488 Z M468,496 L468,502 L474,502 L474,496 L468,496 Z M476,496 L476,502 L482,502 L482,496 L476,496 Z M484,496 L484,502 L490,502 L490,496 L484,496 Z"
+                />
+              </g>
             </g>
-          </g>
-        </svg>
-      </a>
-      <div class="sub-nav-list-wrap jsc-nav-wrap">
-        <ul class="sub-nav-list jsc-nav-list">
-          <li>
-            <a href="/index.html"></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <ul class="gallery-preview jsc-gallery-preview">
-      <!-- preview list -->
-    </ul>
-    <ul class="gallery-thumb-list jsc-gallery-thumb">
-      <!-- thumb list -->
-    </ul>
-    <div class="back-filter jsc-back-filter"></div>
-  </main>
-  <footer>
-    <small>&copy; フォトスタジオ ナチューラ</small>
-  </footer>
+          </svg>
+        </a>
+        <div class="sub-nav-list-wrap jsc-nav-wrap">
+          <ul class="sub-nav-list jsc-nav-list">
+            <li>
+              <a href="/index.html"></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <ul class="gallery-preview jsc-gallery-preview">
+        <!-- preview list -->
+      </ul>
+      <ul class="gallery-thumb-list jsc-gallery-thumb">
+        <!-- thumb list -->
+      </ul>
+    </main>
+    <footer>
+      <small>&copy; フォトスタジオ ナチューラ</small>
+    </footer>
+  </div>
+  <div class="back-filter jsc-back-filter"></div>
+  <div class="loading-display jsc-loading">
+    <div class="spinner"></div>
+  </div>
   <script src="/dist/js/min/jquery-3.2.1.min.js"></script>
   <script src="/dist/js/min/common.min.js"></script>
   <script src="/dist/js/min/subPage.min.js"></script>
